k8s/02-1-otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: otel-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector:0.100.0
        args: ["--config=/etc/otel-collector-config.yaml"]
        ports:
        - containerPort: 4317
        - containerPort: 4318
        volumeMounts:
        - name: otel-collector-config-vol
          mountPath: /etc/otel-collector-config.yaml
          subPath: otel-collector-config.yaml
      volumes:
      - name: otel-collector-config-vol
        configMap:
          name: otel-collector-conf
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: otel-demo
spec:
  selector:
    app: otel-collector
  ports:
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
    protocol: TCP
  - name: otlp-http
    port: 4318
    targetPort: 4318
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector-consumer
  namespace: otel-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector-consumer
  template:
    metadata:
      labels:
        app: otel-collector-consumer
    spec:
      containers:
      - name: otel-collector-consumer
        image: otel/opentelemetry-collector:0.100.0
        args: ["--config=/etc/otel-collector-consumer-config.yaml"]
        volumeMounts:
        - name: otel-collector-consumer-config-vol
          mountPath: /etc/otel-collector-consumer-config.yaml
          subPath: otel-collector-consumer-config.yaml
      volumes:
      - name: otel-collector-consumer-config-vol
        configMap:
          name: otel-collector-consumer-conf
