k8s/06-logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: otel-demo
spec:
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:8.14.0
        ports:
        - containerPort: 5044
        volumeMounts:
        - name: pipeline
          mountPath: /usr/share/logstash/pipeline
      volumes:
      - name: pipeline
        configMap:
          name: logstash-pipeline
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: otel-demo
spec:
  selector:
    app: logstash
  ports:
    - port: 5044
      targetPort: 5044
